--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+== 1.6.0 / 2012-08-23
+
+=== 1 major enhancement
+* Remove support for SOAP transport (will fallback to REST if SOAP is requested)
+
 == 1.5.0 / 2012-03-28
 
 === 1 major enhancement
